# bbvm

./: CMakeLists.txt  README.md  📘 BBVM Instruction Set Reference.md
programs/: program.irn
src/: main.cpp
